--- a/Calculator.form
+++ b/Calculator.form
@@ -38,7 +38,7 @@
     <Component class="javax.swing.JTextField" name="jtxtDisplay">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="0" id="blue" palette="1" red="0" type="palette"/>
+          <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Verdana" size="20" style="1"/>
@@ -104,7 +104,7 @@
           <Font name="Monospaced" size="20" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="21" green="32" red="69" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="C"/>
       </Properties>
@@ -421,7 +421,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="310" width="60" height="50"/>
+          <AbsoluteConstraints x="80" y="310" width="60" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -443,7 +443,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="80" y="310" width="60" height="50"/>
+          <AbsoluteConstraints x="10" y="310" width="60" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
